# choose-your-own-ci-adventure

./: .bazelignore  .gitignore  .npmrc  BUILD.bazel  MODULE.bazel  dev  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.mjs
src/: App.vue  main.js  utils.mjs
src/components/: Job.vue  Scenario.vue  Transition.vue
src/pages/: Scenario1.vue  Scenario2.vue  Scenario3.vue  Start.vue
src/scenarios/: scenario1.mjs  scenario2.mjs  scenario3.mjs  scenarios.mjs
